[gd_scene load_steps=9 format=2]

[ext_resource path="res://Fallout DeMakeUs Sprites/Protectron/Protectron_idle.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Fallout DeMakeUs Sprites/fonts/PressStart2P-vaV7.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Fallout DeMakeUs Sprites/Pip_boy/Text_arrow_green.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 4 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 5 ), null ],
"loop": true,
"name": "arrow_blink",
"speed": 5.0
} ]

[node name="Enemy" type="StaticBody2D"]
pause_mode = 2
script = ExtResource( 2 )

[node name="enemy_sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Interact_box" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interact_box"]
shape = SubResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Dialog_box" type="Popup" parent="CanvasLayer"]
pause_mode = 2
visible = true
anchor_left = 0.5
anchor_top = 0.987
anchor_right = 0.5
anchor_bottom = 0.987
margin_left = -463.0
margin_top = -71.2
margin_right = 49.0
margin_bottom = -7.20001
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Dialog_box"]
modulate = Color( 0.0117647, 0.996078, 0.0509804, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/normal_font = SubResource( 3 )
text = "wretched Intruder!!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text_arrow" type="AnimatedSprite" parent="CanvasLayer/Dialog_box"]
position = Vector2( 498, 53 )
scale = Vector2( 2, 2 )
frames = SubResource( 4 )
animation = "arrow_blink"
frame = 1
[connection signal="area_entered" from="Interact_box" to="." method="_on_Interact_box_area_entered"]
[connection signal="area_exited" from="Interact_box" to="." method="_on_Interact_box_area_exited"]
